--- a/config/config/application.yml
+++ b/config/config/application.yml
@@ -6,7 +6,7 @@
 # stripe_api_key: sk_test_2J0l093xOyW72XUYJHE4Dv2r
 # stripe_publishable_key: pk_test_ro9jV5SNwGb1yYlQfzG17LHK
 #
-  nrel_key: f7bQ5VZkpwcU0F8lYJmx0fYUmSVKU0GSk8GgRH4o
+nrel_key: "f7bQ5VZkpwcU0F8lYJmx0fYUmSVKU0GSk8GgRH4o"
 # production:
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
